# TaskVerse

./: .gitignore  Makefile  README.md  Structure.md  manage.py  pyproject.toml
TaskVerse/: asgi.py  settings.py  urls.py  wsgi.py
comments/: models.py
comments/migrations/: 0001_initial.py
projects/: forms.py  models.py  urls.py  views.py
projects/migrations/: 0001_initial.py  0002_project_team.py
projects/templates/: project_create.html  project_detail.html  project_list.html  project_team.html
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_rename_taskpriority_priority_rename_tasktag_tag.py  0003_alter_task_assigned_to.py  0004_alter_task_assigned_to_alter_task_priority_and_more.py  0005_alter_task_status.py  0006_alter_task_priority_delete_priority.py
tasks/templates/: task_detail.html  task_form.html  task_list.html
templates/: base.html  base_generic.html  index.html  sidemenu.html
theme/static_src/: pnpm-lock.yaml  tailwind.config.js
theme/static_src/src/: styles.css
ui/: text_input.py  ui.py
ui/components/button/: button.py  template.html
ui/components/user_badge/: template.html  (+1 more)
ui/templates/: input.html  select.html  select_multiple.html  textarea.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_name_user_last_login_user_password_and_more.py  0003_user_firstname_user_lastname.py  0004_rename_firstname_user_first_name_and_more.py  0005_user_bio.py
users/templates/: user_login.html  user_logout.html  user_profile.html  user_register.html
(+5 files in other folders)
