[tool.poetry]
name = "taskverse"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.ruff]
line-length = 90
extend-select = ["Q"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
pillow = "^10.3.0"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
django-widget-tweaks = "^1.5.0"
ruff = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
